# ghostfs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cert.pem  ecosystem.server.config.js  key.pem  test.txt
.github/workflows/: standalone.yml  ubuntu-22.04-build-dev.yml  ubuntu-22.04-build.yml  ubuntu-build-dev.yml  ubuntu-build.yml
capnp/: access.capnp  access.capnp.c++  access.capnp.h  access.response.capnp  access.response.capnp.c++  access.response.capnp.h  auth.capnp  auth.capnp.c++  auth.capnp.h  auth.response.capnp  auth.response.capnp.c++  auth.response.capnp.h  create.capnp  create.capnp.c++  create.capnp.h  create.response.capnp  create.response.capnp.c++  create.response.capnp.h  flush.capnp  flush.capnp.c++  flush.capnp.h  flush.response.capnp  flush.response.capnp.c++  flush.response.capnp.h  fsync.capnp  fsync.capnp.c++  fsync.capnp.h  fsync.response.capnp  fsync.response.capnp.c++  fsync.response.capnp.h  getattr.capnp  getattr.capnp.c++  getattr.capnp.h  getattr.response.capnp  getattr.response.capnp.c++  getattr.response.capnp.h  ghostfs.capnp  ghostfs.capnp.c++  ghostfs.capnp.h  lookup.capnp  (+95 more)
documentation/: CMakeLists.txt  conf.py
include/ghostfs/: auth.h  fs.h  ghostfs.h  rpc.h  uuid.h  ws.h  wss.h
source/: auth.cpp  fs.cpp  ghostfs.cpp  rpc.cpp  uuid.cpp  ws.cpp  wss.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: ghostfs.cpp
tools/token/: index.js  package-lock.json  package.json  token.capnp.d.ts  token.capnp.js  token.response.capnp.d.ts  token.response.capnp.js
